<resources>
    <string name="app_name">BirthdayKeeper</string>
    <string name="birthdayManName">Имя:</string>
    <string name="surnameBirthdayMan">Фамилия:</string>
    <string name="category">Категория</string>
    <string name="birthday">День рождения:</string>
    <string name="email">Почта:</string>
    <string name="phone">Телефон:</string>
    <string name="sortIcon">sorting</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="tempCongratIcon">поздравления</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="staart">Запустить</string>
    <string name="stooop">Остановить</string>
</resources>