<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHappyEventActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/birthdayManName"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/nameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/surnameBirthdayMan"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/surnameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/phoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/dateBirthId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                ></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:textSize="17dp" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>


            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:onClick="addNewPerson"
                android:text="Создать"></Button>

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>